@@ -250,6 +250,7 @@ AC_SUBST(GCCINC)
 
 AC_OUTPUT([Config.make
 vendor/redhat/oracleasm.init
+vendor/redhat/oracleasm-userspace.spec
 vendor/redhat/oracleasm-2.4.9-e.spec
 vendor/redhat/oracleasm-2.4.21-EL.spec
 vendor/unitedlinux/oracleasm.init
